--- a/src/css/main.css
+++ b/src/css/main.css
@@ -60,17 +60,18 @@
 /*-------------------------------------------------------*/
 
 
-/*--------------Formato da página------------------------
+/*--------------Formato da página------------------------*/
+
 @page { 
     size: 210mm 280mm;
 }
-@page:left{
-    margin: 15mm 3mm 15mm 20mm;
-}
 @page:right{
-   margin: 15mm 12mm 15mm 11mm;
+    margin: 11mm 3mm 11mm 20mm; /* 15mm right=3mm 15mm left=20mm;*/
 }
-*/
+@page:left{
+   margin: 11mm 12mm 11mm 11mm; /* 15mm 12mm 15mm 11mm; */
+}
+
 /*-----------------------paginação-------------------------------*/
 body {
     display: block;
@@ -78,55 +79,60 @@ body {
     counter-reset: page 18;
 }
 
+/* content com char especial, ver coluna CSS em http://brajeshwar.github.io/entities/  */
 @page:right{  /* impares */
     
     @bottom-left{     
-        content: "Braz Oral Res 2015;29(suppl 1)";
+        content: "Braz Oral Res 2015;29(suppl 1) \00a0 ";
         font-family:SabonLTStd-Roman;
         font-size: 8pt;
-        text-align: right;  
-        padding-right: 1%; 
+        text-align: right;
         padding-bottom: 80%;
-
-
+        padding-left: 20%;
+        padding-right: 0; /*old  1%*/
     }
     @bottom-right{
-        margin-top: 0;
         content:counter(page);
+        text-align: left; /* ?? right */
+
+        margin-top: 0;
+        margin-right: 0; /*old 2% */        
         padding-left:4pt;
+        padding-bottom: 80%;
+
         border-left: solid 1pt #9b9d9f;
+
         font-family:FuturaBT-Heavy;
         font-size: 9pt; 
         font-weight: bold;
-        text-align: left;
-        padding-bottom: 80%;
-        margin-right: 2%;
     }
 }
 
 @page:left{  /* pares */
     
     @bottom-right{      
-        content: "Proceedings of the 32st SBPqO Annual Meeting";
+        content: " \00a0 Proceedings of the 32st SBPqO Annual Meeting";
         /*content: "Proceedings of the 31st SBPqO Annual Meeting";*/
         font-family:SabonLTStd-Roman;
         font-size: 8pt;
         text-align: left;   
         border-left: solid 1pt #9b9d9f;
         padding-bottom: 80%;
-        padding-left: 1%;
+        padding-left: 0; /*old 1%*/
         padding-right: 20%;
 
     }
     @bottom-left{
-        margin-top: 0;
         content:counter(page);
+        text-align: left;
+
+        margin-top: 0;
         padding-right:4pt;
+        margin-bottom: 80%;
+
         font-family:FuturaBT-Heavy;
         font-size: 9pt; 
         font-weight: bold;
-        text-align: left;
-        margin-bottom: 80%;
     }
 }
 
@@ -210,6 +216,12 @@ a{
 div.title{
     width: 85%;
     font-size: 7.0pt;
+    padding-top: .5pt;
+}
+
+div.title-block{ /* new */
+    width: 85%;
+    font-size: 7.2pt;
     padding-top: .5pt;
 }
 
@@ -301,7 +313,7 @@ span.contrib{
     font-style: italic;
     text-align: left;
     font-family: FuturaBT-LightItalic;
-    font-size: 6pt;
+    font-size: 6pt;  /* 7pt;*/
 }
 p.aff
 {
