--- a/src/css/prop.css
+++ b/src/css/prop.css
@@ -1,3 +1,6 @@
+
+/*-------------- LIXO
+
 div.title-block{
     width: 85%;
     font-size: 7.2pt;
@@ -7,8 +10,6 @@ div.title-block{
 span.contrib{
     font-size: 7pt;
 }
-
-/*--------------Formato da página------------------------*/
 @page { 
     size: 210mm 280mm;
 }
@@ -18,4 +19,5 @@ span.contrib{
 @page:right{
    margin: 15mm 12mm 15mm 11mm;
 }
-/*------------------------fim----------------------------*/
+
+*/
